# casual-bi-agent

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: .coverage  Dockerfile  Dockerfile.streamlit  README.md  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260511_0001_initial_schema.py  20260512_0002_external_signals.py  20260512_0003_shopify_raw.py  20260513_0004_shopify_kpi_views.py  20260513_0005_system_config.py  20260513_0006_shopify_data_source_column.py  20260513_0007_shopify_channel_from_tags.py  20260513_0008_shopify_use_processed_at.py  20260514_0009_backfill_insight_kpi.py  20260518_0010_multi_agent_audit_columns.py
backend/scripts/: briefing_smoke.py  causal_smoke.py  detect_anomalies.py  graph_investigate.py  investigate.py  load_olist.py  mcp_smoke.py  run_schemas.py  seed_minimal.py  shopify_seed_dev_store.py  shopify_simulate.py  shopify_sync.py  simulate.py  slack_test.py
backend/src/biq/: anthropic_admin.py  audit.py  config.py  db.py  logging.py  observability.py  system_config.py
backend/src/biq/agents/: anomaly.py  briefing.py  graph.py  investigator.py
backend/src/biq/agents/multi/: audit.py  budget.py  graph.py  state.py  supervisor.py
backend/src/biq/agents/multi/leads/: analyst.py  reporter.py  strategist.py
backend/src/biq/agents/multi/sub/: causal.py  descriptive.py  option_generator.py  report_synthesizer.py
backend/src/biq/api/: admin.py  app.py  auth.py  briefing.py  external.py  health.py  investigations.py  investigations_assisted.py  kg.py  kpi.py  middleware.py  rate_limit.py  recommendations.py  runs.py  settings.py  shopify.py
backend/src/biq/integrations/: slack.py
backend/src/biq/mcp_servers/: bi.py
backend/src/biq/seeders/: synthetic.py
backend/src/biq/tools/: causal.py  context.py  correlation.py  kg.py  kpi.py  shopify.py
backend/src/biq/ui/: hitl.py
backend/tests/: conftest.py  test_anomaly_detector.py  test_anthropic_admin.py  test_api.py  test_api_assisted.py  test_auth.py  test_graph.py  test_investigator.py  test_kg.py  test_kpi_views.py  test_multi_agent_analyst.py  test_multi_agent_audit.py  test_multi_agent_budget.py  test_multi_agent_reporter.py  test_multi_agent_skeleton.py  test_multi_agent_strategist.py  test_settings_api.py  test_system_config.py  test_tools.py
backend/tests/evals/: briefing_judge.py  dataset.py  judge.py  test_briefing_quality.py  test_investigator_quality.py
data/seed/: README.md
db/schemas/: 01_raw.sql  02_kpi.sql  03_docs.sql  04_kg.sql  05_audit.sql
docs/: architecture.md  clean-architecture.md  course-mapping.md  kpi-catalog.yaml  mcp-clients.md  shopify-setup.md  sso-setup.md
frontend/: .env.local.example  .gitignore  README.md  middleware.ts  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/home/: page.tsx
frontend/app/insights/: page.tsx
frontend/app/investigate/: page.tsx
frontend/app/kpis/: page.tsx
frontend/app/kpis/[view]/: page.tsx
frontend/app/markt-radar/: page.tsx
frontend/app/recommendations/: page.tsx
frontend/app/recommendations/[id]/: page.tsx
frontend/app/runs/: page.tsx
frontend/app/runs/[id]/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: auth-gate.tsx  briefing-card.tsx  commerce-calendar-widget.tsx  correlation-card.tsx  kpi-icon.tsx  kpi-tile.tsx  model-picker.tsx  nav.tsx  page-header.tsx  plot.tsx  shopify-status-widget.tsx  sidebar.tsx  sparkline.tsx  topbar.tsx  ui.tsx
frontend/lib/: api.ts  auth0.ts  hooks.ts  kpi-format.ts  kpi-metadata.ts  labels.ts  model-choice.ts  recommendation-body.ts  recommendations.ts  types.ts
infra/: deploy.md  render.yaml
n8n/: README.md
n8n/workflows/: daily-briefing.json  monday-briefing.json  outcome-measurement-daily.json  shopify-hourly-sync.json
r-service/: Dockerfile  api.R
