[project]
name = "biq"
version = "0.0.1"
description = "Causal BI Agent — backend, MCP servers, agents"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.118",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pandas>=2.2",
    "anthropic>=0.40",
    "mcp[cli]>=1.2",
    "langgraph>=0.2",
    "streamlit>=1.40",
    "alembic>=1.13",
    "sentry-sdk[fastapi]>=2.0",
    "slowapi>=0.1.9",
    "python-json-logger>=2.0",
    "langfuse>=4.6.1",
    "tavily-python>=0.7.24",
    "pytrends>=4.9.2",
    "yfinance>=1.3.0",
    "feedparser>=6.0.12",
    "pyjwt[crypto]>=2.8",
    "cachetools>=5.3",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Skip the eval suite by default — it costs real money. Opt in via `-m eval`.
addopts = "-ra -q -m 'not eval'"
markers = [
    "causal: integration test requiring the R service on port 8765",
    "eval: LLM-as-judge quality eval. Requires ANTHROPIC_API_KEY; calls the real API.",
]

[tool.coverage.run]
source = ["src/biq"]
branch = true
omit = [
    # Interface layers — covered by integration smoke tests
    "src/biq/ui/*",
    "src/biq/mcp_servers/*",
    # LLM-driven path needs an API key — covered by `make investigate` smoke
    "src/biq/agents/investigator.py",
    # R-dependent — covered by `make causal-smoke` and @causal pytest marker
    "src/biq/tools/causal.py",
    # Synthetic-data generators (fixture code, exercised by simulate/seed scripts)
    "src/biq/seeders/*",
]

[tool.coverage.report]
fail_under = 75
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]  # ruff format handles line length

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/biq"]
